--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Slackbot that will live in AWS Lambda with the help of Serverless Framework library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bundle": "webpack --config-name slackbot-dev",
+    "dev": "nodemon ./dist/slackbot-bundle.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,18 @@
   "homepage": "https://github.com/donkeykong91/aws-lamdba-slackbot#readme",
   "dependencies": {
     "@slack/bolt": "^3.6.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.32.0",
+    "json-loader": "^0.5.7",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "yaml-loader": "^0.6.0"
   }
 }
