--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "json-loader": "^0.5.7",
+    "nodemon": "^2.0.13",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.53.0",
